# Window

./: .gitignore  FR & NFR.md  LICENSE  Narrative.docx  Narrative.md  README-En.md  README.md  User Story.docx  User Story.md  _BACKUP_29134.gitignore  _BASE_29134.gitignore  _LOCAL_29134.gitignore  _REMOTE_29134.gitignore  pyproject.toml
AI/: README.md  run_inference.py
AI/bechmark/: res.tsv
AI/dataset/: test.txt  train.txt  validation.txt
AI/utils/: dataset_preparation.py  move_text.py  prediction_evaluate.py  switch_id.py  train.py  visualize.py
AI/yolo_configs/: carDD.yaml
Diagrams/: Diagrams.xml  README.md  class&useCase&sequnce.drawio
Docs/: FR & NFR-En.md  FR & NFR.md  Narrative.md  README.md  User Story.md
backend/libs/log/: __init__.py
backend/srvs/office/: manage.py
backend/srvs/office/gate/: apps.py  models.py  serializers.py  settings.py  urls.py  views.py
backend/srvs/office/office/: _settings.py  (+11 more)
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.css  index.js
frontend/src/Context/: HomeContext.jsx
frontend/src/Pages/: Home.jsx  HomeCategory.jsx  LoginSignup.jsx  Upload.jsx
site/: Cart.jsx  Footer.jsx  Hero.jsx  Navbar.jsx  NewCollections.jsx  Offers.jsx  Popular.jsx  Product.jsx  RentBanner.jsx  SaleBanner.jsx  Upload.jsx  app.js  index.html  item.jsx
site/Login/: App.jsx  LoginRegister.css  LoginRegister.jsx  index.css
site/css/: Cart.css  Hero.css  HomeCategory.css  LoginSignup.css  NewCollections.css  Offers.css  Product.css  RentBanner.css  SaleBanner.css  style.css
(+28 files in other folders)
